# qcm-generator-pro

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  claude_best_practice.md  debug_actual_hierarchies.py  debug_chunk_title_mapping.py  debug_filtering.py  debug_parcours3_analysis.py  debug_title_detection.py  debug_title_positions.py  diagnostic_titles.py  docker-compose.cpu.yml  docker-compose.yml  main_app.py  mypy-results.xml  pyproject.toml  qcm-generator-specs.md  requirements-dev.txt  requirements.txt  test_custom_title_config.py  test_intelligent_patterns.py  test_real_dp600.py  test_strict_custom_config.py
.claude/: settings.local.json
.github/: claude-code-review.yml  pull_request_template.md
.github/workflows/: ci.yml  claude-code-review.yml
.serena/: project.yml
.streamlit/: config.toml  pages.toml
scripts/: audit_database.py  check_rag_data.py  check_setup.py  create_test_pdf.py  debug_upload.py  demo.py  docker_setup.py  docker_start.py  explore_vectordb.py  implement_chromadb_rag.py  integration_test.py  migrate_to_chromadb.py  start_app.py  test_document_deletion.py  test_few_shot_integration.py  test_filename_uniqueness.py  test_persistence.py  test_setup.py  test_udemy_export.py  vectordb_analyzer.py
src/: __init__.py
src/api/: dependencies.py  main.py
src/api/routes/: __init__.py  documents.py  export.py  generation.py  health.py
src/core/: config.py  constants.py  database.py  exceptions.py
src/prompts/: __init__.py  templates.py
src/prompts/languages/: __init__.py  base.py  en.py  fr.py
src/services/: chunk_based_generator.py  document_manager.py  enhanced_qcm_generator.py  llm_manager.py  pdf_processor.py  qcm_generator.py  question_parser.py  question_prompt_builder.py  question_selection.py  rag_engine.py  theme_extractor.py  title_based_generator.py  title_detector.py  validator.py
src/services/document/: __init__.py  document_manager.py  pdf_processor.py  theme_extractor.py  title_detector.py
src/services/export/: __init__.py  export_service.py
src/services/generation/: __init__.py  chunk_based_generator.py  enhanced_qcm_generator.py  progressive_workflow.py  qcm_generator.py  question_prompt_builder.py  title_based_generator.py
src/services/infrastructure/: __init__.py  progress_tracker.py  rag_engine.py
src/services/llm/: __init__.py  langsmith_tracker.py  llm_manager.py  simple_examples_loader.py
src/services/quality/: __init__.py  chunk_variety_validator.py  question_deduplicator.py  question_diversity_enhancer.py  validator.py
src/services/ui/: __init__.py  document_ui_service.py  ollama_ui_service.py  streamlit_helpers.py
src/ui/: progress_components.py  progress_example.py  streamlit_app.py
src/ui/components/: __init__.py  progress_components.py
src/ui/components/common/: __init__.py  forms.py  header.py  sidebar.py  status_display.py
src/ui/components/documents/: __init__.py  document_display.py
src/ui/components/title_generation/: __init__.py  content_preview.py  hierarchical_title_selector.py  title_generation_config.py  title_structure_analyzer.py  title_suggestions.py
src/ui/core/: __init__.py  interface_manager.py  session_state.py
src/ui/pages/: __init__.py  document_manager.py  document_upload.py  export_page.py  qcm_generation.py  system_page.py  title_generation.py
tests/: __init__.py  conftest.py
tests/integration/: test_database.py  test_database_simple.py
tests/playwright/: .gitignore  README.md  conftest.py  pytest.ini  requirements.txt  run_tests.py  test_complete_baseline.py  test_exploration.py  test_interface_comparison.py  test_simple_baseline.py  test_streamlit_baseline.py
tests/unit/: test_basic.py  test_config.py  test_models.py  test_schemas.py
